change view controls, improve selection

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div id='left'>
         <h3>Line 3D</h3>
         <ul>
-            <li>Left Mouse: Rotate</li>
-            <li>Middle Mouse: Change Y</li>
-            <li>Right Mouse: Pan</li><br>
+            <li>Left Mouse: Select or Move</li>
+            <li>Middle Mouse: Pan View</li>
+            <li>Right Rotate View</li><br>
             <li>Q: Front View</li>
             <li>W: Top View</li>
             <li>E: Right Side View</li>
