--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <br>
             <li>A: <button onclick='addPoint()'>Add Point</button></li>
             <br>
+            <p>Change Mode:</p>
             <li>S: <button onclick='selectMode()'>Select Points</button></li>
             <li>C: <button onclick='connectMode()'>Connect Selected</button></li>
             <li>D: <button onclick='disconnectMode()'>Disconnect Selected</button></li>
@@ -33,7 +34,6 @@
             <label for='toggleAxes'>Show World Axes</label><br>
             <input type="checkbox" id='toggleCameraAxes' onchange='toggleCameraAxes(this)' checked>
             <label for='toggleCameraAxes'>Show Camera Axes</label><br>
-            
         </div>
         <a href="http://minkcv.com" id='author'>minkcv.com</a>
     </div>
@@ -48,5 +48,6 @@
     </div>
     <script src="main.js"></script>
     <script src="points.js"></script>
+    <script src="line.js"></script>
 </body>
 </html>
