--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li>S: <button onclick='selectMode()'>Select Points</button></li>
             <li>C: <button onclick='connectMode()'>Connect Selected</button></li>
             <li>D: <button onclick='disconnectMode()'>Disconnect Selected</button></li>
+            <li>X: <button onclick='deleteMode()'>Delete Points</button></li>
         </ul>
         <div id='controls'>
             <input type="checkbox" id="toggleGrid" onchange='toggleGrid(this)' checked>
