add autoselect and autoconnect functionality

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <label for='toggleAxes'>Show World Axes</label><br>
             <input type="checkbox" id='toggleCameraAxes' onchange='toggleCameraAxes(this)' checked>
             <label for='toggleCameraAxes'>Show Camera Axes</label><br>
+            <input type="checkbox" id='toggleAutoSelect' onchange='toggleAutoSelect(this)' checked>
+            <label for='toggleAutoSelect'>Auto Select New Points</label><br>
+            <input type="checkbox" id='toggleAutoConnect' onchange='toggleAutoConnect(this)' checked>
+            <label for='toggleAutoConnect'>Auto Connect New Points</label><br>
         </div>
         <a href="http://minkcv.com" id='author'>minkcv.com</a>
     </div>
