--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <input type="checkbox" id='toggleAutoConnect' onchange='toggleAutoConnect(this)' checked>
             <label for='toggleAutoConnect'>Auto Connect New Points</label><br>
             <p>
-                Loading/Saving
-                <button onclick='saveJSON()'>Save to JSON</button>
-                <input type="text" id='loadsave'>
+                Loading/Saving <br>
+                <button onclick='saveJSON()'>Save to JSON</button> <br>
+                <input type="text" id='loadsave'> <br>
                 <button onclick='loadJSON()'>Load from JSON</button>
             </p>
         </div>
