fix issues parsing grid snap distance

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <input type="checkbox" id='toggleAutoConnect' onchange='toggleAutoConnect(this)' checked>
             <label for='toggleAutoConnect'>Auto Connect New Points</label><br>
             <label for='gridSnapDistance'>Grid Snap Distance</label>
-            <input type='text' id='gridSnapDistance' value='0' onkeyup='changeGridSnapDistance(this)'>
+            <input type='number' id='gridSnapDistance' value='0' onkeyup='changeGridSnapDistance(this)'>
             <p>
                 Loading/Saving <br>
                 <button onclick='saveJSON()'>Save to JSON</button> <br>
