fix bug when moving point, add option to mirror about xy plane

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <label for='toggleAutoConnect'>Auto Connect New Points</label><br>
             <label for='gridSnapDistance'>Grid Snap Distance</label>
             <input type='number' id='gridSnapDistance' value='0' onkeyup='changeGridSnapDistance(this)'>
+            <button onclick='mirrorXY()'>Mirror About XY Plane</button>
             <p>
                 Loading/Saving <br>
                 <button onclick='saveJSON()'>Save to JSON</button> <br>
