loading/saving v2, better for models with more lines

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 Loading/Saving <br>
                 <button onclick='saveJSON()'>Save to JSON</button> <br>
                 <input type="text" id='loadsave'> <br>
-                <button onclick='loadJSON()'>Load from JSON</button>
+                <button onclick='loadJSON()'>Load from JSON</button> <br>
             </p>
         </div>
         <a href="http://minkcv.com" id='author'>minkcv.com</a>
