--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li>C: <button onclick='connectMode()'>Connect Selected</button></li>
             <li>D: <button onclick='disconnectMode()'>Disconnect Selected</button></li>
             <li>X: <button onclick='deleteMode()'>Delete Points</button></li>
+            <li>B: <button onclick='boxSelectMode()'>Box Select</button></li>
         </ul>
         <div id='controls'>
             <input type="checkbox" id="toggleGrid" onchange='toggleGrid(this)' checked>
