multi select uses shift now

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li>E: Right Side View</li>
             <li>R: Isometric View</li>
             <li>T: Recenter Camera</li>
+            <li>SHIFT: Multi select</li>
             <br>
             <li>A: <button onclick='addPoint()'>Add Point</button></li>
             <li>Z: <button onclick='selectNoneAll()'>Select None/All</button></li>
