--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li>D: <button onclick='disconnectMode()'>Disconnect Selected</button></li>
             <li>X: <button onclick='deleteMode()'>Delete Points</button></li>
             <li>B: <button onclick='boxSelectMode()'>Box Select</button></li>
+            <li>V: <button onclick='copySelected()'>Copy Selected</button></li>
         </ul>
         <div id='controls'>
             <input type="checkbox" id="toggleGrid" onchange='toggleGrid(this)' checked>
