--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <input type="checkbox" id='toggleAutoConnect' onchange='toggleAutoConnect(this)' checked>
             <label for='toggleAutoConnect'>Auto Connect New Points</label><br>
             <label for='gridSnapDistance'>Grid Snap Distance</label>
-            <input type='number' id='gridSnapDistance' value='0' onkeyup='changeGridSnapDistance(this)'><br>
+            <input type='text' id='gridSnapDistance' value='0'onkeyup='changeGridSnapDistance(this)'><br>
             <button onclick='mirrorXY()'>Mirror About XY Plane</button>
             <p>
                 Loading/Saving <br>
