add extrude command

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li>X: <button onclick='deleteMode()'>Delete Points</button></li>
             <li>B: <button onclick='boxSelectMode()'>Box Select</button></li>
             <li>V: <button onclick='copySelected()'>Copy Selected</button></li>
+            <li>G: <button onclick='extrudeSelected()'>Extrude Selected</button></li>
         </ul>
         <div id='controls'>
             <input type="checkbox" id="toggleGrid" onchange='toggleGrid(this)' checked>
