add light theme

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
             <label for='toggleAutoDeselect'>Auto Deselect Previous Points</label><br>
             <input type="checkbox" id='toggleAutoConnect' onchange='toggleAutoConnect(this)' checked>
             <label for='toggleAutoConnect'>Auto Connect New Points</label><br>
+            <input type="checkbox" id='toggleLightTheme' onchange='toggleLightTheme(this)'>
+            <label for='toggleLightTheme'>Use Light Theme</label><br>
             <label for='gridSnapDistance'>Grid Snap Distance</label>
-            <input type='text' id='gridSnapDistance' value='0'onkeyup='changeGridSnapDistance(this)'><br>
+            <input type='text' id='gridSnapDistance' value='0'onkeyup='changeGridSnapDistance(this)'><br><br>
             <button onclick='mirrorXY()'>Mirror About XY Plane</button>
             <p>
                 Loading/Saving <br>
