add button to delete selected points

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <label for='gridSnapDistance'>Grid Snap Distance</label>
             <input type='text' id='gridSnapDistance' value='0'onkeyup='changeGridSnapDistance(this)'><br><br>
             <button onclick='mirrorXY()'>Mirror About XY Plane</button>
+            <button onclick='deleteSelected()'>Delete Selected Points</button>
             <p>
                 Loading/Saving <br>
                 <button onclick='saveJSON()'>Save to JSON</button> <br>
