fix accordion styling

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         }
         // Show controls by default
         acc[0].nextElementSibling.style.display = 'block';
+        acc[0].classList.toggle('active');
     </script>
     <script src="main.js"></script>
     <script src="points.js"></script>
