rotate about center

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <br>
         <button class='accordion'>Rotate Selection</button>
         <div class='panel'>
-            Degrees <input type='number' id='rotatedegrees' value='90'><br>
+            Degrees <input type='number' id='rotatedegrees' value='15'><br>
+            <input type='checkbox' id='rotatecenter' checked><label for='rotatecenter'>About Selection Center</label><br>
             AXis
             <button onclick='rotateX()'>X</button>
             <button onclick='rotateY()'>Y</button>
