scale around selection center

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <li><button onclick='deleteSelected()'>Delete Selected Points</button></li>
             <li><button onclick='scaleSelected()'>Scale Selected Points</button>by<input type='number' id='scale' value='1'><br>
                 On Axis
-                <input type='checkbox' id='scalex'><label for='scalex'>X</label>
-                <input type='checkbox' id='scaley'><label for='scaley'>Y</label>
-                <input type='checkbox' id='scalez'><label for='scalez'>Z</label>
+                <input type='checkbox' id='scalex' checked><label for='scalex'>X</label>
+                <input type='checkbox' id='scaley' checked><label for='scaley'>Y</label>
+                <input type='checkbox' id='scalez' checked><label for='scalez'>Z</label>
             </li>
             <li>V: <button onclick='copySelected()'>Copy Selected</button></li>
             <li>G: <button onclick='extrudeSelected()'>Extrude Selected</button></li>
