--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <button onclick='saveJSON()'>Save to JSON</button> <br>
             <input type="text" id='loadsave'> <br>
             <button onclick='loadJSON()'>Load from JSON</button> <br>
+            <button onclick='saveOBJ()'>Save OBJ</button> <br>
         </div>
         <a href="http://minkcv.com" id='author'>minkcv.com</a>
     </div>
