--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
             <label for='compresssave'>Round to 2 decimals</label><br>
             <button onclick='saveJSON()'>Save to JSON</button> <br>
             <input type="text" id='loadsave'> <br>
-            <button onclick='loadJSON()'>Load from JSON</button> <br>
+            <button onclick='loadJSON()'>Load from JSON</button> <br> <br>
             <button onclick='saveOBJ()'>Save OBJ</button> <br>
+            Load OBJ:<input type='file' onchange='loadOBJ()'>
         </div>
         <a href="http://minkcv.com" id='author'>minkcv.com</a>
     </div>
