add function for exporting lines for c programs

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
             <input type="text" id='loadsave'> <br>
             <button onclick='loadJSON()'>Load from JSON</button> <br> <br>
             <button onclick='saveOBJ()'>Save OBJ</button> <br>
-            Load OBJ:<input type='file' onchange='loadOBJ()'>
+            Load OBJ:<input type='file' onchange='loadOBJ()'><br>
+            <button onclick='saveC()'>Save for C program</button> <br>
         </div>
         <a href="http://minkcv.com" id='author'>minkcv.com</a>
     </div>
