--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <button onclick='saveOBJ()'>Save OBJ</button> <br>
             Load OBJ:<input type='file' onchange='loadOBJ()'><br>
             <button onclick='saveC()'>Save for C program</button> <br>
+            <button onclick='saveBin()'>Save as binary data</button> <br>
         </div>
         <a href="http://minkcv.com" id='author'>minkcv.com</a>
     </div>
