add demo model of me, add link to repo on github

--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
             <button onclick='saveC()'>Save for C program</button> <br>
             <button onclick='saveBin()'>Save as binary data</button> <br>
         </div>
+        <br><br><br><br>
+        <a href="http://github.com/minkcv/line3d">Source on github</a><br>
         <a href="http://minkcv.com" id='author'>minkcv.com</a>
     </div>
     <div id='right'>
