fix new point grip scale, add function to save shape as json

--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
             <input type='checkbox' id='compresssave' checked>
             <label for='compresssave'>Round to 2 decimals</label><br>
             <button onclick='saveJSON()'>Save to JSON</button> <br>
+            <button onclick='saveShapeJSON()'>Save Selected Shape JSON</button> <br>
             <input type="text" id='loadsave'> <br>
-            <button onclick='loadJSON()'>Load from JSON</button> <br> <br>
+            <button onclick='loadJSON()'>Load from JSON</button> <br>
+            <br>
             <button onclick='saveOBJ()'>Save OBJ</button> <br>
             Load OBJ:<input type='file' onchange='loadOBJ()'><br>
             <button onclick='saveC()'>Save for C program</button> <br>
