add icosphere shape generator

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                 Angle Delta: <input type='number' id='angledelta', value='20'><br>
                 Radius: <input type='number' id='sphereradius', value='100'>
             </li>
+            <li><button onclick='addIcoSphere()'>Add IcoSphere</button><br>
+                Iterations: <input type='number' id='icosphereiterations' value='1'><br>
+                Radius: <input type='number' id='icosphereradius', value='50'>
+            </li>
             <li><button onclick='addCylinder()'>Add Cylinder</button><br>
                 Radius: <input type='number' id='cylinderradius' value='100'><br>
                 Height: <input type='number' id='cylinderheight' value='100'><br>
